--- a/data-architect.html
+++ b/data-architect.html
@@ -57,7 +57,7 @@ Jose, California. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2/apply'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2/apply'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Senior Data Warehouse Architect. San Francisco, California. Wonderschool. Full 
 Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
@@ -100,7 +100,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/datastrong/job/oRmyafwF'>Datastrong Careers - Data Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/datastrong/job/oRmyafwF'>Datastrong Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Data Architect. Location: Boston, MA. Job ID: 1084. The Data Architect will 
 support the implementation of a customer data lake. You should be able to 
@@ -178,7 +178,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light">Hilversum, Netherlands</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/endo-pharma/job/ojsmafw1'>Endo Pharmaceuticals Inc. Careers - Senior Data Center Operations Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/endo-pharma/job/ojsmafw1'>Endo Pharmaceuticals Inc. Careers - Senior Data Center Operations Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -272,7 +272,7 @@ database models; Documentation of functional requirements and system?...</p>
 Management team. The right candidate will lead the development of enterprise 
 class?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/scalecomputing/jobs/1766288'>Job Application for Data Center Architect at Scale Computing</a></h5> 
+<h5><a href='https://boards.greenhouse.io/scalecomputing/jobs/1766288'>Job Application for Data Center Architect at Scale Computing</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -360,7 +360,7 @@ implementation of ETL processes throughout the design, build and maintenance
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/GZbUKpwPM3/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
+<h5><a href='http://zgfarchitects.applytojob.com/apply/GZbUKpwPM3/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -426,7 +426,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">Kitchener-Waterloo</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qc09Vfw0&k=Job&j=otphafw3&__jvst=Employee&__jvsd=sLm23fwW&__jvsc=Twitter&bid=nc3rwKwr'>Qlik Careers - Analytics Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qc09Vfw0&k=Job&j=otphafw3&__jvst=Employee&__jvsd=sLm23fwW&__jvsc=Twitter&bid=nc3rwKwr'>Qlik Careers - Analytics Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-29</p>
 <hr/>
